--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Most Wanted</title>
 </head>
 <body>
-    <button onClick="app(data)" style="font-size: 50px">Start Searching</button>
+    <button onClick="app(data)" style="font-size: 50px">Start Your Search...</button>
     <script src="data.js"></script>
     <script src="app.js"></script>
 </body>
