--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Most Wanted</title>
 </head>
-<body style="background-color:rgb(45, 45, 45)">
-    <button onClick="app(data)" style="font-size: 50px; position: absolute; left: 550px; top: 330px;">Start Your Search...</button>
+<body style="background-color:darkslategrey">
+    <button onClick="app(data)" style="font-size: 50px; position: absolute; left: 550px; top: 330px; border: none;">Start Your Search...</button>
     <script src="data.js"></script>
     <script src="app.js"></script>
 </body>
